# discopy

./: README.md  setup.cfg
discopy/: __init__.py  cartesian.py  cat.py  drawing.py  messages.py  monoidal.py  rigid.py  tensor.py  tk.py
docs/cat/: index.rst
test/: test_cat.py
